<resources>
    <string name="app_name">GridView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btnPlayorPause">播放/暂停</string>
    <string name="btnStop">停止</string>
    <string name="btnQuit">退出</string>
    <string name="btnPre">上一首</string>
    <string name="btnNext">下一首</string>

    <string name="play">播放</string>
    <string name="playing">Playing</string>
    <string name="pause">暂停</string>
    <string-array name="week_name">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
